2025-05-01T00:59:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14767418780 # 630
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-01
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 519 912 / 532 925
* notice: next accum: outdated-unq outdated-all / unq all: 520 913 / 533 926
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-16] / [2025-04-30]

2025-04-30T00:54:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14744335856 # 629
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-30
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 518 911 / 531 924
* notice: next accum: outdated-unq outdated-all / unq all: 519 912 / 532 925
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-15] / [2025-04-29]

2025-04-29T00:53:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14720953403 # 628
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-29
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 517 910 / 530 923
* notice: next accum: outdated-unq outdated-all / unq all: 518 911 / 531 924
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-14] / [2025-04-28]

2025-04-28T00:55:31Z: