@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-01T00:59:30Z",
-  "count_outdated" : 913,
-  "uniques_outdated" : 520,
-  "count" : 926,
-  "uniques" : 533,
+  "timestamp" : "2025-05-02T00:54:18Z",
+  "count_outdated" : 914,
+  "uniques_outdated" : 521,
+  "count" : 927,
+  "uniques" : 534,
   "clones" : [
-    {
-      "timestamp": "2025-04-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-19T00:00:00Z",
       "count": 2,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-04-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
