@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-04-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-04-19T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -54,6 +49,11 @@
     },
     {
       "timestamp": "2025-04-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-05-01T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
