@@ -1,3 +1,12 @@
+2025-05-02T00:54:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14786461891 # 631
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-02
+* notice: last 14d: unq all: 4 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 520 913 / 533 926
+* notice: next accum: outdated-unq outdated-all / unq all: 521 914 / 534 927
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-04-17] / [2025-05-01]
+
 2025-05-01T00:59:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14767418780 # 630
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-01
